syntax = "proto3";

package fulmine.v1;

import "google/api/annotations.proto";

// DelegatorService defines the public RPCs that clients can consume to delegate the refresh of
// their VTXO set
service DelegatorService {
  // GetDelegatorInfo returns info about the delegator contract
  rpc GetDelegatorInfo(GetDelegatorInfoRequest) returns (GetDelegatorInfoResponse) {
    option (google.api.http) = {
      get: "/v1/delegator/info"
    };
  };

  // Delegate is consumed by clients to request the delegation of the refresh of their VTXOs
  rpc Delegate(DelegateRequest) returns (DelegateResponse) {
    option (google.api.http) = {
      post: "/v1/delegate"
      body: "*"
    };
  };
}

// GetDelegatorInfoRequest is the request message for GetDelegatorInfo rpc
message GetDelegatorInfoRequest {}
// GetDelegatorInfoResponse is the response message for GetDelegatorInfo rpc
message GetDelegatorInfoResponse {
  // The delegator pubkey to include in the vtxo script
  string pubkey = 1;
  // The service fee applied by the delegator
  string fee = 2;
  // The delegator address for the service fee, if any
  string delegator_address = 3;
}

// DelegateRequest is the request message for Delegate rpc
message DelegateRequest {
  // The partially signed intent that is gonna be registered by the delegator when close enough to
  // underlying VTXOs expiration
  Intent intent = 1;
  // The partially signed forfeit txs that are gonna be submitted by the delegator when joining
  // the batch execution
  repeated string forfeit_txs = 2;
  // Opt-in flag to instruct the delegator to not replace an existing delegate that includes at
  // least one VTXO included in this request
  bool reject_replace = 3;
}
// DelegateResponse is the response message for Delegate rpc
message DelegateResponse {}

// Intent represents an intent message
message Intent {
  // Intent message in plain-text (stringified JSON)
  string message = 1;
  // Intent proof tx (psbt in base64 format)
  string proof = 2;
}